--- a/html-css/tableview-start.html
+++ b/html-css/tableview-start.html
@@ -121,6 +121,10 @@ select {
   border: 5px inset #FFDB1B;
 }
 
+.externalButton {
+  width: 418px;
+}
+
 .line {
   height: 10px;
   background-color: #FFDB1B;
