--- a/html-css/tableview-start.html
+++ b/html-css/tableview-start.html
@@ -2,7 +2,7 @@
 <html lang=en translate=no>
 <head>
   <meta charset=UTF-8>
-  <meta name=viewport content=width=[widest centered div], initial-scale=1.0, user-scalable=yes>
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes"/>
   <title>Table View</title>
   <style>
 
@@ -18,7 +18,6 @@ body {
   text-align: center;
   -ms-overflow-style: none;
   overflow-y: scroll;
-  overflow-w: scroll;
 }
 
 table, th, td {
